Tried to change configuration so as to avoid of connect with me to stretch.

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,14 +2,16 @@
     display : flex;
     align-items: center;
     justify-content : space-between;
-    margin : 20px 170px;
+    margin : 30px 180px;
+    
+    
 }
 .nav-menu{
     display : flex;
     align-items : center;
     list-style: none;
     gap: 60px;
-    font: 20px;
+    font-size: 20px;
 }
 .nav-connect{
     padding: 20px 40px;
@@ -17,6 +19,8 @@
     background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 100%);
     cursor: pointer;
     transition: 0.5s;
+    white-space: nowrap;
+    flex-shrink: 0;
 }
 .nav-connect:hover{
     transform: scale(1.05);
